Auto-scroll no longer covered by header

--- a/src/sass/components/_next-section-button.scss
+++ b/src/sass/components/_next-section-button.scss
@@ -3,7 +3,11 @@
 // ---------------------------------------------------------------------------
 
 #next-section-button {
-  height: 36px;
-  width: 54px;
+  margin: auto;
   margin-bottom: 6px;
+
+  img {
+    height: 36px;
+    width: 54px;
+  }
 }
