--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -23,6 +23,6 @@ body {
   min-height: $content-height;
 }
 
-.background-dark {
+.background-alt {
   background-color: $color-background-variant;
 }
