--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -4,14 +4,16 @@
 
 #about {
   section {
-    min-height: $content-height;
-  }
-
-  #intro {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: $content-height;
+    padding-top: 56px;
+    margin-top: -56px;
+    background-clip: content-box;
+  }
 
+  #intro {
     &-content {
       display: flex;
       flex-direction: column;
@@ -67,9 +69,9 @@
         }
       }
     }
+  }
 
-    #next-section-button {
-      align-self: flex-end;
-    }
+  #experience {
+
   }
 }
